--- a/pit_app/static/css/pitdb.css
+++ b/pit_app/static/css/pitdb.css
@@ -300,16 +300,20 @@ g text {
 .contains:hover {
   background:#ff00ff;
 }
+
 span._tmp_string {
 background: #F9C3C3;
 padding: 2px 7px;
-    cursor:pointer
 }
-.container2{
-  background:red !important;
-  color:red !important;
-  opacity:0.5;
+
+.container2, ._code_string {
+  background:yellow !important;
+  color:yellow !important;
+  /*opacity:0.7;*/
+  height: 20px !important;
+  z-index: 50px;
 }
+
 code {
   position: absolute;
   left: 0;
@@ -317,28 +321,27 @@ code {
   padding: 0px 0px;
   pointer-events:none;
   background-color: transparent !important; 
+  z-index: 50px;
 }
+
 span._code_string {
   background: #4C5CF9;
   color: #4C5CF9;
   padding: 0px 0px;
   cursor: pointer;
-  font-size: 13.5px;
+  font-size: 13.8px;
   font-family: Times New Roman;
   pointer-events:none;
-  opacity:0.2
+  opacity:0.5;
+  height: 10px;
+  z-index: 50px !important;
 }
+
 .hehe{
   background:#000;
   color:#fff
 }
-._tmp_span{
-   
-}
 
-.sunburstInfo {
-  
-}
 .sunburstInfo p {
   font-style: italic;
   padding-top: 40px !important;
@@ -352,7 +355,6 @@ span._code_string {
 .nav i {
   margin-right: 10px;
 }
-
 
 .spinner {
   display:    none;
