--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -70,7 +70,7 @@
           
           <div class="panel-body">
             <label>TGE Sequence:</label>
-            <div class="wordwrap test"><span>{{ summary.tge.amino_seq }}</span></div><br/><br/>
+            <div id="tgeSeq" class="wordwrap"><span class="test">{{ summary.tge.amino_seq }}</span></div><br/><br/>
               <table class="table table-striped table-bordered dataTable no-footer clickable" id="tges" >
               <thead>
                 <tr>
@@ -92,8 +92,8 @@
                     <td><a href="protein?uniprot={{ res.uniprotID }}" target="_blank">{{ res.uniprotID }}</a></td>                  
                     <td class="wordwrap"><a href="organism?organism={{ res.organism }}" target="_blank">{{ res.organism }}</a></td>
                     <td >{{ res.type }}&nbsp;({{ res.strand }})</td>
-                    <td class="wordwrap" style="font-size: 12px; line-height: 18px;"><strong style="font-size: 14px;">Total: {{ res.peptide_num }}</strong><br/>{% for pep in res.peptides %}{{ pep }}{% if not loop.last %}, {% endif %}<br/>{% endfor %}</td>
-                    <td class="wordwrap">{{ res.sampleName }}</td>
+                    <td class="wordwrap" style="font-size: 12px; line-height: 18px;"><strong style="font-size: 14px;">Total: {{ res.peptide_num }}</strong><br/><ul style="padding-left: 18px">{% for pep in res.peptides %}<li>{{ pep|wordwrap(15, True) }}</li>{% endfor %}</ul></td>
+                    <td class="wordwrap" style="font-size: 12px; line-height: 18px;">{{ res.sampleName|wordwrap(10, True) }}</td>
                     <td><a href="experiment?experiment={{ res.expID }}" target="_blank">{{ res.expTitle }}</a></td>
                   </tr>
                 {% endfor %}
