--- a/pit_app/static/css/pitdb.css
+++ b/pit_app/static/css/pitdb.css
@@ -308,9 +308,8 @@ padding: 2px 7px;
 
 .container2, ._code_string {
   background:yellow !important;
-  color:yellow !important;
+  /*color:yellow !important;*/
   /*opacity:0.7;*/
-  height: 20px !important;
   z-index: 50px;
 }
 
@@ -326,14 +325,17 @@ code {
 
 span._code_string {
   background: #4C5CF9;
-  color: #4C5CF9;
+  /*color: #4C5CF9;*/
+  color: black;
   padding: 0px 0px;
   cursor: pointer;
-  font-size: 13.8px;
-  font-family: Times New Roman;
+  font-size: 14px;
+  padding-bottom: 3px;
+  font-family: "Helvetica Neue","Helvetica","Arial","sans-serif";
   pointer-events:none;
-  opacity:0.5;
-  height: 10px;
+  opacity:1;
+  /*font-weight: bold;*/
+  /*height: 10px;*/
   z-index: 50px !important;
 }
 
