--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -70,7 +70,7 @@
           
           <div class="panel-body">
             <label>TGE Sequence:</label>
-            <div id="tgeSeq" class="wordwrap"><span class="test">{{ summary.tge.amino_seq }}</span></div><br/><br/>
+            <div id="tgeSeq"><span class="test">{{ summary.tge.amino_seq|wordwrap(99, True) }}</span></div><br/><br/>
               <table class="table table-striped table-bordered dataTable no-footer clickable" id="tges" >
               <thead>
                 <tr>
