--- a/pit_app/templates/results/organism.html
+++ b/pit_app/templates/results/organism.html
@@ -64,7 +64,6 @@
           <div class="panel-body">
              <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#tgeModal"><i class="fa fa-download"></i>&nbsp;Download TGEs</button>
             <br/><br/>
-            <span id="spinnerTable"><i class="fa fa-spinner fa-4x fa-spin" aria-hidden="true"></i></span>
             <table class="table table-striped table-bordered dataTable no-footer" id = "orgTable" style="display: none;">
             <thead>
               <tr>
@@ -100,20 +99,18 @@
 <!-- Modal -->
 <div id="tgeModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content" style="padding-left: 10px">
       <div class="modal-header">
         <button type="button" class="close btn" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Download TGEs</h4>
       </div>
-      <form role="form"  id="downloadForm" name="downloadForm" action="/download" method="POST">
+      <form role="form" id="downloadForm" name="downloadForm" action="/download" method="POST">
         <div class="modal-body">
           <div class="row">
             <div class="col-md-12">
               <input type="hidden" id="organism" name="organism" value='{{ summary.organism }}'>
               <fieldset>
-                <p>
-                  Select the fields to include in the download file: 
-                </p>
+                <h5>Select the fields to include in the download file:</h5><br/>
                 <div class="checkbox checkbox-primary">
                   <input id="tgeAcc" type="checkbox" name="check" value="tgeAcc" checked="">
                   <label for="tgeAcc">TGE Accession</label>
@@ -136,6 +133,10 @@
                   <input id="aminoSeq" type="checkbox" name="check" value="aminoSeq" checked="">
                   <label for="aminoSeq">Amino Acid Sequence</label>
                 </div>
+                <br/>
+                <h5>Select the file type:</h5>
+                <label class="radio-inline"><input type="radio" name="fileType" value="fasta" checked>Fasta</label>
+                <label class="radio-inline"><input type="radio" name="fileType" value="csv">CSV</label>
                 <br/>
                 <span class="modalWarning" style="color: #c12e2a; font-weight: bold"></span>
               </fieldset>
